--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,11 @@
 language: php
+php:
+    - '5.6'
+    - '7.1'
+env:
+    - DB=mysql
+    
+before_script:
+  - if [[ "$DB" == "mysql" ]]; then mysql -e "create database IF NOT EXISTS tine20;" -uroot; fi
+  
+script: phpunit --configuration tests/tine20/phpunit.xml --coverage-text
